# amr-platform

./: .gitignore  README.md
archiv/esp32_test/: README.md  platformio.ini
archiv/esp32_test/src/: main.cpp
archiv/firmware_serial/: platformio.ini
archiv/firmware_serial/src/: main.cpp
archiv/firmware_serial/test/: calibration_encoder.cpp  main.cpp.backup  main_odom.cpp  main_pid.cpp
archiv/firmware_test/: platformio.ini
archiv/firmware_test/src/: main.cpp
archiv/firmware_test/test/: hardware_test_monitor.cpp
archive/amr_serial_bridge/: SETUP.md  package.xml  setup.cfg  setup.py
archive/amr_serial_bridge/amr_serial_bridge/: __init__.py  serial_bridge.py
archive/amr_serial_bridge/launch/: serial_bridge.launch.py
docker/: Dockerfile  docker-compose.yml  ros_entrypoint.sh
docs/: 01-microros-esp32s3.md  01-phase1-befehle.md  02-ros2-humble-docker-pi5.md  03-rplidar-a1.md  04-phase4-befehle.md  04-robot-localization-ekf.md  04-urdf-tf-ekf.md  05-slam-toolbox.md  06-nav2.md  07-vision-AI.md  AMR_Implementierungsplan.html  AMR_Implementierungsplan.md  To-Do-Liste-AMR-Projekt.md  config.h_esp32.html  config.h_esp32.md  entwicklerdoku-status.html  entwicklerdoku-status.md  entwicklerdokumentation.md  systemdokumentation.md  todo-liste.html  todo-liste.md
esp32_microros_test/: README.md  extra_script.py  platformio.ini
esp32_microros_test/include/: config.h
esp32_microros_test/src/: main.cpp
esp32_microros_test/test/: USB_CDC_Test.cpp  micro_ROS.cpp
firmware/: README.md  test_communication.sh  todo-liste.md
firmware/include/: config.h
firmware/src/: main.cpp
firmware/test/: micro_ROS_Motor_PID.cpp
firmware_serial/: README.md
ros2_ws/: frames_2025-12-21_13.51.28.gv  frames_2025-12-21_14.11.31.gv  frames_2025-12-21_14.35.09.gv
ros2_ws/src/amr_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_bridge/amr_bridge/: odom_converter.py
ros2_ws/src/amr_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/amr_bringup/launch/: amr.launch.py  bringup.launch.py
ros2_ws/src/amr_description/: CMakeLists.txt  package.xml
ros2_ws/src/amr_description/launch/: description.launch.py
ros2_ws/src/amr_description/urdf/: amr.urdf
scripts/: deploy.sh  install_udev_rules.sh  md-to-html-converter.py  microros-agent.service  setup_microros_service.sh
