<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_bringup</name>
  <version>0.1.0</version>
  <description>AMR Bringup - Launch files for complete system</description>
  <maintainer email="jan@unger.de">Jan Unger</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amr_bridge</exec_depend>
  <exec_depend>amr_description</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>